deploy: 54bb99376defdb7c7ef7f0c54985d36f22614ffc

--- a/misc/index.html
+++ b/misc/index.html
@@ -4,7 +4,7 @@
 <span class="nav-item navbar-text mx-1">/</span>
 <a class="nav-item nav-link" href=/misc/about title=About>About</a>
 <span class="nav-item navbar-text mx-1">/</span>
-<a class="nav-item nav-link" href=/misc/contact title=Contact>Contact</a></div></nav></div><hr><div id=content><div class=container><h1>Miscs</h1><ul><li><a href=https://bydlosoft.com/misc/projects/>2024-06-17 | Projects</a></li><li><a href=https://bydlosoft.com/misc/about/>2024-06-17 | About</a></li><li><a href=https://bydlosoft.com/misc/contact/>2024-06-17 | Contact</a></li></ul></div></div><div id=footer class=mb-5><hr><div class="container text-center"><a href=https://github.com/ns-mkusper class="fab fa-github fa-1x" title=Github></a>
+<a class="nav-item nav-link" href=/misc/contact title=Contact>Contact</a></div></nav></div><hr><div id=content><div class=container><h1>Miscs</h1><ul><li><a href=https://bydlosoft.com/misc/about/>2024-06-17 | About</a></li><li><a href=https://bydlosoft.com/misc/contact/>2024-06-17 | Contact</a></li><li><a href=https://bydlosoft.com/misc/projects/>2024-06-17 | Projects</a></li></ul></div></div><div id=footer class=mb-5><hr><div class="container text-center"><a href=https://github.com/ns-mkusper class="fab fa-github fa-1x" title=Github></a>
 <a href=https://gitlab.com/mkusper class="fab fa-gitlab fa-1x" title=Gitlab></a>
 <a href=https://www.goodreads.com/user/show/33494702-tadek class="fab fa-goodreads fa-1x" title=Goodreads></a>
 <a href=mailto:mkusper@bydlosoft.com class="fas fa-envelope fa-1x" title=E-mail></a></div><div class="container text-center"><a href=https://opensource.org/license/mit title="[ Released under the MIT license. ]"><small>[ Released under the MIT license. ]</small></a></div></div></body></html>
